# Assignment4

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: ArrayList.h  ArrayListIterators.h  LinkedList.h  LinkedListIterators.h  QueueAdapter.h  QueueBase.h  ScopedArray.h  StackAdapter.h  StackBase.h
lib/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest/googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: ArrayList.cpp  LinkedList.cpp
tests/: main.cpp  queueTest.cpp  stackTest.cpp  tests.h
